# Pokemoon

./: .clang-format  .gitignore  CMakeLists.txt  StringUtils.cpp  StringUtils.h  application.cpp  application.h  defines.h  event.cpp  event.h  input.cpp  input.h  logging.cpp  logging.h  main.cpp  memory.cpp  memory.h  platform.cpp  platform.h  run.sh
assets/shaders/: Builtin.ObjectShader.frag.glsl  Builtin.ObjectShader.frag.spv  Builtin.ObjectShader.vert.glsl  Builtin.ObjectShader.vert.spv
container/: darray.cpp  darray.h
core/: Clock.cpp  Clock.h  clock.cpp  clock.h
math/: types.h
memory/: LinearAllocator.cpp  LinearAllocator.h
platform/: filesystem.cpp  filesystem.h
renderer/: Pipeline.cpp  Pipeline.h  backend.cpp  backend.h  buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  device.cpp  device.h  fence.cpp  fence.h  framebuffer.cpp  framebuffer.h  frontend.cpp  frontend.h  image.cpp  image.h  render_pass.cpp  render_pass.h  swapchain.cpp  swapchain.h  types.h
renderer/shaders/: ObjectShader.cpp  ObjectShader.h
